samples/_failures_safe/1761340958_979fdc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a46a1ff1.c: In function ‘main’:
./samples/SAFE/__tmp_a46a1ff1.c:128:5: error: expected declaration or statement at end of input
  128 |     int column = 1;
      |     ^~~
